@@ -51,6 +51,11 @@ function parse_commandline(...)
     return true
 end
 
+function is_suspendmanager_enabled()
+    local ok, sm = pcall(reqscript, 'suspendmanager')
+    return ok and sm.isEnabled()
+end
+
 function get_num_filters(btype, subtype, custom)
     local filters = dfhack.buildings.getFiltersByType({}, btype, subtype, custom)
     return filters and #filters or 0
